--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -7,6 +7,20 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "LocalDB": "Server=(local);uid=sa;pwd=12345;database=TemplateWithIdentity;TrustServerCertificate=True"
+    "LocalDB": "Server=host.docker.internal;Database=SWD-Student-Event-Forum;User Id=sa;Password=yourStrong(!)Password;TrustServerCertificate=True"
+  },
+  "JWT": {
+    "ValidAudience": "TemplateWithIdentity",
+    "ValidIssuer": "https://localhost:7006",
+    "SecretKey": "ThisIsALongerSecretKeyThatIsMoreThan256Bits",
+    "TokenValidityInMinutes": 15,
+    "RefreshTokenValidityInDays": 7
+  },
+  "EmailConfiguration": {
+    "From": "famsojt2024@gmail.com",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 587,
+    "Username": "famsojt2024@gmail.com",
+    "Password": "qzyw kfbg ujrh uqni"
   }
 }
