--- a/WebAPI/appsettings.Development.json
+++ b/WebAPI/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "LocalDB": "Server=(local);uid=sa;pwd=12345;database=TemplateWithIdentity;TrustServerCertificate=True"
+    "LocalDB": "Server=localhost,1433;Database=SWD-Student-Event-Forum;User Id=sa;Password=yourStrong(!)Password;TrustServerCertificate=True"
   },
   "JWT": {
     "ValidAudience": "TemplateWithIdentity",
