--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -30,6 +30,6 @@ jobs:
     name: Deploy app
     runs-on: ubuntu-latest
     steps:
-      - users: actions/checkout@v3
+      - uses: actions/checkout@v3
       - uses: superfly/flyctl-actions/setup-flyctl@master
       - run: flyctl deploy --remote-only
