update azure's connection string

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "LocalDB": "Server=host.docker.internal;Database=SWD-Student-Event-Forum;User Id=sa;Password=yourStrong(!)Password;TrustServerCertificate=True"
+    "LocalDB": "Server=student-event-forum-db.database.windows.net;Database=student-event-forum-db;uid=huydietswd;pwd=anhemtaokhomau@123;TrustServerCertificate=True"
   },
   "JWT": {
     "ValidAudience": "TemplateWithIdentity",
