--- a/WebAPI/appsettings.Development.json
+++ b/WebAPI/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "LocalDB": "Server=localhost,1433;Database=SWD-Student-Event-Forum;User Id=sa;Password=yourStrong(!)Password;TrustServerCertificate=True"
+    "LocalDB": "Server=student-event-forum-db.database.windows.net;Database=student-event-forum-db;uid=huydietswd;pwd=anhemtaokhomau@123;TrustServerCertificate=True"
   },
   "JWT": {
     "ValidAudience": "TemplateWithIdentity",
