--- a/WebAPI/appsettings.Development.json
+++ b/WebAPI/appsettings.Development.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "LocalDB": "Server=student-event-forum-db.database.windows.net;Database=student-event-forum-db;uid=huydietswd;pwd=anhemtaokhomau@123;TrustServerCertificate=True"
+    "LocalDB": "Server=(local);Database=student-event-forum-db;uid=sa;pwd=12345;TrustServerCertificate=True",
+    //"LocalDB": "Server=student-event-forum-db.database.windows.net;Database=student-event-forum-db;uid=huydietswd;pwd=anhemtaokhomau@123;TrustServerCertificate=True"
   },
   "JWT": {
     "ValidAudience": "TemplateWithIdentity",
