--- a/Repositories/Repositories.csproj
+++ b/Repositories/Repositories.csproj
@@ -23,6 +23,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="NETCore.MailKit" Version="2.1.0" />
+    <PackageReference Include="Swashbuckle" Version="5.6.0" />
   </ItemGroup>
 
   <ItemGroup>
