add: google authen api

--- a/WebAPI/appsettings.Development.json
+++ b/WebAPI/appsettings.Development.json
@@ -7,7 +7,7 @@
   },
   "ConnectionStrings": {
     //test local đỡ tốn tiền (nhanh)
-    "LocalDB": "Server=(local);Database=student-event-forum-db;uid=sa;pwd=12345;TrustServerCertificate=True",
+    "LocalDB": "Server=(local);Database=student-event-forum-db;uid=sa;pwd=12345;TrustServerCertificate=True"
     //"LocalDB": "Server=student-event-forum-db.database.windows.net;Database=student-event-forum-db;uid=huydietswd;pwd=anhemtaokhomau@123;TrustServerCertificate=True"
   },
   "JWT": {
@@ -23,6 +23,15 @@
     "Port": 587,
     "Username": "famsojt2024@gmail.com",
     "Password": "qzyw kfbg ujrh uqni"
+  },
+  "GoogleCredential": {
+    "ClientId": "300629896056-fc0eh3uluhj16970b7m3tnn3ioqnafdo.apps.googleusercontent.com"
+  },
+  "GoogleCredential1": {
+    "ClientId": "300629896056-fc0eh3uluhj16970b7m3tnn3ioqnafdo.apps.googleusercontent.com"
+  },
+  "GoogleCredential2": {
+    "ClientId": "125103858333-ec3qu0ntsr64qja32k3g0fh6h47nuvl7.apps.googleusercontent.com"
   }
 
 }
