minor changes: add imageUrl in event and package, update crud event

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -24,5 +24,12 @@
     "Port": 587,
     "Username": "famsojt2024@gmail.com",
     "Password": "qzyw kfbg ujrh uqni"
+  },
+  "Vnpay": {
+    "ReturnUrl": "https://student-event-forum-api.azurewebsites.net/api/payment/vnpay-return",
+    "PaymentUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
+    "TmnCode": "0RZLO13S",
+    "HashSecret": "IKNZLEFKQ6QGFJU6TXO4DOSLB58XEI63",
+    "Version": "2.1.0"
   }
 }
