DONE PAGINATION AND FILTER EVENT

--- a/Repositories/Repositories.csproj
+++ b/Repositories/Repositories.csproj
@@ -33,7 +33,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Helper\" />
+    <Folder Include="Commons\Payload\RequestModels\" />
   </ItemGroup>
 
 </Project>
