--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -29,4 +29,9 @@
 		<PackageReference Include="Swashbuckle" Version="5.6.0" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="DTOs\EventDTOs\" />
+	  <Folder Include="DTOs\UserDTOs\" />
+	</ItemGroup>
+
 </Project>
