--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
-﻿version: '3.4'
+﻿version: '3.8'
 
 services:
   webapi:
-    image: ${DOCKER_REGISTRY-}webapi
+    image: lequocuy/eventzone.webapi:latest
     container_name: eventzone.api
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
