fix connection string

--- a/WebAPI/appsettings.Development.json
+++ b/WebAPI/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "LocalDB": "Server=eventzone.database;Database=eventzone;User=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=True;",
+    "RedisCacheDB": "eventzone.cache:6379"
   }
 }
