--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,14 +1,13 @@
-version: '3.4'
-
 services:
   webapi:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_HTTP_PORTS=5000
-      - ASPNETCORE_HTTPS_PORTS=5001
+      # - ASPNETCORE_HTTPS_PORTS=5001
+      - APPDATA=/root/.config/appdata
     ports:
       - "5000:5000"
-      - "5001:5001"
+      # - "5001:5001"
     volumes:
       - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
-      - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
+      # - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
