change docker compose and workflow

--- a/WebAPI/appsettings.Development.json
+++ b/WebAPI/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "LocalDB": "Server=eventzone.database;Database=eventzone;User=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=True;",
+    "DefaultConnection": "Server=eventzone.database;Database=eventzone;User Id=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=True;",
     "RedisCacheDB": "eventzone.cache:6379"
   }
 }
