--- a/.github/workflows/main_eventzone.yml
+++ b/.github/workflows/main_eventzone.yml
@@ -28,8 +28,8 @@ jobs:
       - name: Build and push web image
         uses: docker/build-push-action@v2
         with:
-          context: ./webapi
-          file: ./webapi/WebAPI/Dockerfile
+          context: .
+          file: WebAPI/Dockerfile
           push: true
           tags: lequocuy/eventzone.api:latest
   deploy:
