--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,6 @@
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - "DatabaseSettings:DefaultConnection=Server=eventzone.database;Database=eventzone;User Id=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=true"
-    # build:
-    #   context: .
-    #   dockerfile: WebAPI/Dockerfile
     ports:
       - "5000:5000"
       # - "5001:5001"
@@ -24,8 +21,8 @@
     ports:
       - "1433:1433"
     volumes:
-      - ./.containers/eventzone-db:/var/opt/mssql/data # thư mục lưu DB
-      - ./bk:/var/opt/mssql/backup      # thư  mục chứa file backup
+      - ./.containers/eventzone-db:/var/opt/mssql/data
+      - ./bk:/var/opt/mssql/backup
     
   eventzone.cache:
     image: redis:latest
