--- a/.github/workflows/main_eventzone.yml
+++ b/.github/workflows/main_eventzone.yml
@@ -8,33 +8,8 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
-    name: Building image
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v1
-        
-      - name: DockerHub login
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-          
-      - name: Build and push web image
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: WebAPI/Dockerfile
-          push: true
-          tags: lequocuy/eventzone.api:latest
   deploy:
     name: Deploying to VPS
-    needs: build
     runs-on: ubuntu-latest
 
     steps:
@@ -49,5 +24,6 @@ jobs:
           password: ${{ secrets.SERVER_PASSWORD }}
           script: |
             cd webapi
-            docker compose pull
-            docker compose up -d
+            git pull origin main
+            docker compose down
+            docker compose up -d --build
