--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,13 @@
 ﻿services:
   webapi:
-    image: lequocuy/eventzone.api:latest
+    # image: ${DOCKER_REGISTRY-}eventzone.api
     container_name: eventzone.api
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - "DatabaseSettings:DefaultConnection=Server=eventzone.database;Database=eventzone;User Id=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=true"
+    build:
+      context: .
+      dockerfile: WebAPI/Dockerfile
     ports:
       - "5000:5000"
       # - "5001:5001"
