--- a/.github/workflows/main_eventzone.yml
+++ b/.github/workflows/main_eventzone.yml
@@ -37,12 +37,10 @@ jobs:
   deploy:
     name: Deploying to VPS
     runs-on: ubuntu-latest
+    needs: build
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: SSH into VPS and deploy
+      - name: Replacing container
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SERVER_HOSTNAME }}
@@ -51,5 +49,4 @@ jobs:
           script: |
             cd code/eventzone
             docker compose pull
-            docker compose down
             docker compose up -d --build
