--- a/WebAPI/appsettings.Development.json
+++ b/WebAPI/appsettings.Development.json
@@ -7,6 +7,8 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=eventzone.database;Database=eventzone;User Id=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=True;",
+    //"DefaultConnection": "Server=(local);Database=eventzone;uid=sa;pwd=12345;TrustServerCertificate=True",
+
     "RedisCacheDB": "eventzone.cache:6379"
   }
 }
