--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -27,7 +27,7 @@
     "Password": "qzyw kfbg ujrh uqni"
   },
   "Vnpay": {
-    "ReturnUrl": "https://ez-api.azurewebsites.net/api/v1/payment/vnpay-ipn-receive",
+    "ReturnUrl": "https://koi.eventzone.id.vn/api/v1/payment/vnpay-ipn-receive",
     "PaymentUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
     "TmnCode": "0RZLO13S",
     "HashSecret": "IKNZLEFKQ6QGFJU6TXO4DOSLB58XEI63",
