--- a/Domain/EventZone.Domain.csproj
+++ b/Domain/EventZone.Domain.csproj
@@ -27,6 +27,7 @@
 		</PackageReference>
 		<PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.7" />
 		<PackageReference Include="NETCore.MailKit" Version="2.1.0" />
+		<PackageReference Include="payOS" Version="1.0.7" />
 		<PackageReference Include="Swashbuckle" Version="5.6.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore.Newtonsoft" Version="6.7.0" />
 	</ItemGroup>
