--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,9 @@
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - "ConnectionStrings__DefaultConnection=Server=eventzone.database;Database=eventzone;User Id=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=true"
+      - "PayOS__ClientId=79aba224-8cab-4dba-af5d-cc2f0b07a2d8"
+      - "PayOS__ChecksumKey=bddd93123dbd655ab9825262be6825817b95dfa126de416ddcb41803539c9642"
+      - "PayOS__ApiKey=b5ba05eb-96ab-46f2-a9b5-c9ea83eb48e3"
     build:
       context: .
       dockerfile: WebAPI/Dockerfile
